<resources>
    <string name="app_name">Restaurent</string>
    <string name="chines_food">Chines Food</string>
    <string name="south_food">South Indian</string>
    <string name="medittrain_food">Mediterranean</string>
    <string name="north_food">North Indian</string>
    <string name="italian_food">Italian Food</string>
    <string name="order_now"><![CDATA[Order Now ->]]></string>
    <string name="chow">Chow Mein</string>
    <string name="braised_food">Braised Pork</string>
    <string name="dump">Dumplings</string>
    <string name="shrimp">Shrimp With
        </string>
    <string name="shrimp_f">Vermicelli and Garlic</string>
    <string name="p">Price: 90/.</string>
    <string name="add_to_cart">Add Item</string>
    <string name="s_food">Sichuan Pork</string>
    <string name="sci">Price : 100/.</string>
    <string name="dp">Price: 200/.</string>
    <string name="braised_p">Price: 110/.</string>
    <string name="ch">Price: 87/.</string>
    <string name="sp">Price: 60-250/.</string>
    <string name="cp">Price: 80-200/.</string>
    <string name="pas">Pasta Con E</string>
    <string name="past">Price: 50/.</string>
    <string name="pcor">Pasta Carbonara</string>
    <string name="d_p">Price: 70/.</string>
    <string name="sld">Caprese Salad</string>
    <string name="sl">Price: 67/.</string>
    <string name="pan">Panzenella</string>
    <string name="panz">Price: 100/.</string>
    <string name="spd">Margherita Pizza</string>
    <string name="si">Price: 300/.</string>
    <string name="menu_item">Menu Item</string>
    <string name="as">Aloo Samosa</string>
    <string name="nir">North Indian Receips</string>
    <string name="mk">Malai Ki Kheer</string>
    <string name="mki">Price: 88/.</string>
    <string name="nih">Rogan Josh</string>
    <string name="pz">Price: 150/.</string>
    <string name="chol">Chole Bhature</string>
    <string name="ci">Price: 40/.</string>
    <string name="fe">Feta</string>
    <string name="pf">Price: 266/.</string>
    <string name="lr"><![CDATA[Lentils & Yogurt]]></string>
    <string name="lp">Price: 350/.</string>
    <string name="spa">Spanakopita</string>
    <string name="spi">Price: 400/.</string>
    <string name="aba">Baba Ganoush</string>
    <string name="bg">Price: 430/.</string>
    <string name="cpp">Pizza</string>
    <string name="piz">Price: 440/.</string>
    <string name="menu">Italian Food List</string>
    <string name="m">Mediterranean Food List</string>
    <string name="menu_cm">Chinese Food List</string>
    <string name="me">North Food List</string>
    <string name="mh">South Indian Food List</string>
    <string name="so">South Indian Thali</string>
    <string name="f">Price: 150/.</string>
    <string name="v">Vada</string>
    <string name="vp">Price: 90/.</string>
    <string name="br">Biryani</string>
    <string name="i">Price: 60/.</string>
    <string name="a">Idli</string>
    <string name="g">Price: 200/.</string>
    <string name="c">Dosa</string>
    <string name="d">Price: 70/.</string>
    <string name="pno">Price: 40-150/.</string>
    <string name="nod">Price: 266-440/.</string>
    <string name="i_food">Price: 50-300/.</string>
    <string name="p_id">P.id</string>
    <string name="n">Name</string>
    <string name="pr">Prices</string>
    <string name="p_code">P Code</string>
    <string name="p_name">P Name</string>
    <string name="prices">Prices</string>
    <string name="pay_now">Pay Now</string>
    <string name="recent">Recently Order</string>
    <string name="order_no"><![CDATA[Order No->]]></string>

</resources>