<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".south">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/mh"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textColor="@color/design_default_color_primary"
            android:textStyle="bold"
            android:textSize="30sp"
            />

    </LinearLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alignmentMode="alignMargins"
        android:layout_marginTop="35dp"
        android:columnCount="2"
        android:rowCount="3"
        android:columnOrderPreserved="false"
        android:padding="14dp"
        >
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginBottom="16dp"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="8dp"
                        >

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal|center_vertical"
                            android:layout_margin="16dp"
                            android:orientation="vertical"
                            >
                            <ImageView
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:layout_gravity="center_horizontal"
                                android:src="@drawable/sou"
                                />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/so"
                                android:textSize="16dp"
                                android:textStyle="italic"
                                android:gravity="center"
                                android:textAlignment="center"
                                />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/f"
                                android:textSize="16dp"
                                android:textStyle="bold"
                                android:gravity="center"
                                android:textAlignment="center"
                                />
                            <Button
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/ch"
                                android:text="@string/add_to_cart"
                                />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>


                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginBottom="16dp"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="8dp"
                        >
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal|center_vertical"
                            android:layout_margin="16dp"
                            android:orientation="vertical"
                            >
                            <ImageView
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:layout_gravity="center_horizontal"
                                android:src="@drawable/vada"

                                />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/v"
                                android:textSize="16dp"
                                android:textStyle="italic"
                                android:gravity="center"
                                android:textAlignment="center"
                                />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/vp"
                                android:textSize="16dp"
                                android:textStyle="bold"
                                android:gravity="center"
                                android:textAlignment="center"
                                />
                            <Button
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/bp"
                                android:text="@string/add_to_cart"
                                />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginBottom="16dp"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="8dp"
                        >
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal|center_vertical"
                            android:layout_margin="16dp"
                            android:orientation="vertical"
                            >
                            <ImageView
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:layout_gravity="center_horizontal"
                                android:src="@drawable/bir"

                                />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/br"
                                android:textSize="16dp"
                                android:textStyle="italic"
                                android:gravity="center"
                                android:textAlignment="center"
                                />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/i"
                                android:textSize="16dp"
                                android:textStyle="bold"
                                android:gravity="center"
                                android:textAlignment="center"
                                />
                            <Button
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/add_to_cart"
                                android:id="@+id/dp"
                                />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginBottom="16dp"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="8dp"
                        >
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal|center_vertical"
                            android:layout_margin="16dp"
                            android:orientation="vertical"
                            >
                            <ImageView
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:layout_gravity="center_horizontal"
                                android:src="@drawable/idli"

                                />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/a"
                                android:textSize="16dp"
                                android:textStyle="italic"
                                android:gravity="center"
                                android:textAlignment="center"
                                />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/g"
                                android:textSize="16dp"
                                android:textStyle="bold"
                                android:gravity="center"
                                android:textAlignment="center"
                                />
                            <Button
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/add_to_cart"
                                android:id="@+id/sp"
                                />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginBottom="16dp"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="8dp"
                        >
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal|center_vertical"
                            android:layout_margin="16dp"
                            android:orientation="vertical"
                            >
                            <ImageView
                                android:id="@+id/south"
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:layout_row="0"
                                android:layout_gravity="center_horizontal"
                                android:src="@drawable/dosa" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/c"
                                android:textSize="16dp"
                                android:textStyle="italic"
                                android:gravity="center"
                                android:textAlignment="center"
                                />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/d"
                                android:textSize="16dp"
                                android:textStyle="bold"
                                android:gravity="center"
                                android:textAlignment="center"
                                />
                            <Button
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/si"
                                android:text="@string/add_to_cart"
                                />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/order_now"
                    android:textSize="20sp"
                    android:id="@+id/order"
                    />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </GridLayout>
</RelativeLayout>